tests/snapshots/compiletests__compiletests__test_query_compile__case_0.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- p(Z, h(Z,W), f(W)).
-----
000	allocate 2
001	put_variable Y1, X1	// Y1=Z
002	put_structure h/2, X2
003	set_value Y1	// Y1=Z
004	set_variable Y2	// Y2=W
005	put_structure f/1, X3
006	set_value Y2	// Y2=W
007	call @0
008	publish

