tests/snapshots/compiletests__compiletests__test_query_compile__case_2.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- f(b, Y).
-----
000	allocate 1
001	put_structure b/0, X1
002	put_variable Y1, X2	// Y1=Y
003	call @0
004	publish

