tests/snapshots/compiletests__compiletests__test_query_compile__case_4.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
a
-----
000	call @0

