tests/snapshots/compiletests__compiletests__test_query_compile__case_5.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- horizontal(line(pt(three, Y), pt(four, five))).
-----
000	allocate 1
001	put_structure three/0, X4
002	put_structure four/0, X6
003	put_structure five/0, X7
004	put_structure pt/2, X2
005	set_value X4
006	set_variable Y1	// Y1=Y
007	put_structure pt/2, X3
008	set_value X6
009	set_value X7
010	put_structure line/2, X1
011	set_value X2
012	set_value X3
013	call @0
014	publish
015	deallocate

