tests/snapshots/compiletests__compiletests__test_query_compile__case_6.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- q(X, Z).
-----
000	allocate 2
001	put_variable Y1, X1	// Y1=X
002	put_variable Y2, X2	// Y2=Z
003	call @0
004	publish

