tests/snapshots/compiletests__compiletests__test_query_compile__case_7.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- q(X, Z), f(b, Y).
-----
000	allocate 3
001	put_variable Y1, X1	// Y1=X
002	put_variable Y2, X2	// Y2=Z
003	call @0
004	put_structure b/0, X1
005	put_variable Y3, X2	// Y3=Y
006	call @0

