tests/snapshots/compiletests__compiletests__test_query_compile__case_8.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
?- f(X, g(Y, a)), g(X, b).
-----
000	allocate 1
001	put_structure a/0, X5
002	put_variable Y1, X1
003	put_structure g/2, X2
004	set_variable X4	// X4=Y
005	set_value X5
006	call @0
007	put_value Y1, X1
008	put_structure b/0, X2
009	call @0
010	deallocate

